<resources>
    <string name="app_name">"Elecciones Generales 2015"</string>

    <string name="action_settings">Configuración</string>
    <string name="my_link"><a href="http://www.charlieferrer.com">www.charlieferrer.com</a></string>

    <string name="my_email"><a href="age.apps.android@gmail.com">age.apps.android@gmail.com</a></string>

    <string name="menu_settings">Settings</string>


    <string name="rajoy">Mariano Rajoy</string>
    <string name="spinner_promt">Eliga una comunidad Autónoma</string>
    <string name="sanchez">Pedro Sanchez</string>
    <string name="rivera">Alvert Rivera</string>
    <string name="iglesias">Pablo Iglesias</string>
    <string name="herzog">Andrés G. Herzog</string>
    <string name="garzon">Alberto Garzón</string>
    <string name="otros"></string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_actividad_sondeo_comunidades">Sondeo por Comunidades</string>
    <string name="title_activity_actividad_acerca_de">Acerca de la App</string>
    <string name="send_to">Comparir App Elecciones Generales</string>
    <string name="link_calendar"><a href ="https://github.com/prolificinteractive/material-calendarview">material-calendarview</a></string>
    <string name="link_button"><a href ="https://github.com/Clans/FloatingActionButton">FloatingActionButton</a></string>
    <string name="link_charts"><a href ="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a></string>
    <string name="licencia_apache">Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at \n http://www.apache.org/licenses/LICENSE-2.\n Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="ad_inter_sondeos">ca-app-pub-5047980690000653/8642108723</string>
    <string name="title_activity_actividad_web">ActividadWeb</string>
    <string name="title_activity_actividad_comunidades">ActividadComunidades</string>
    <string name="title_activity_actividad_pager">ActividadPager</string>
    <string name="mensaje_contacto">Si piensas que la información proporcionada es erronea, porfavor no dudes en ponerte en contacto.</string>

</resources>
